2002-06-02  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ca" to ALL_LINGUAS again. Updated and fixed
	ca.po is added.

2002-06-02  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* doc/reference/tmpl/gnome-client.sgml,
	  libgnomeui/gnome-client.c,
	  doc/reference/tmpl/gnome-ui-init.sgml,
	  libgnomeui/gnome-ui-init.c,
	  doc/reference/tmpl/gnome-appbar.sgml,
	  libgnomeui/gnome-appbar.c
	  libgnomeui/gnome-app.c,
	  doc/reference/tmpl/gnome-app.sgml: API documentation updates.

	* doc/reference/libgnomeui-docs.sgml: One can never reorder this
	  file too many times in the search for perfection (or even
	  comprehensibility).
	
	* doc/reference/libgnomeui-sections.txt: Moved a few things into
	  private sections, get rid of the gconf entries. Just a general
	  casualty of running gtk-doc a few times, really, but I want to
	  pretend it was all intentional.

	* doc/reference/Makefile.am: Don't bother scanning
	  gnome-gconf-ui.h; it's just for internal use.

	* doc/reference/tmpl/gnome-gconf-ui.sgml: Removed.


2002-06-01  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* doc/reference/Makefile.am: Add GNOME_DISABLE_DEPRECATED guards
	  into the scanning.

	* doc/reference/libgnomeui-docs.sgml: Add an object hierarchy
	  diagram and begin to order the sections in some sane fashion.

	* doc/reference/libgnomui-sections.txt: Put *Private classes
	  into the private subsection. Add in the introspected parameter
	  documentation for the widgets.

	* doc/reference/tmpl/gnome-about.sgml, libgnomeui/gnome-about.c:
	  Document the GnomeAbout widget. One down, a few hundred to go.
	  This is sooo not fun.
	
	* doc/reference/tmpl/.cvsignore: Ignore *-unused.sgml.

	* doc/reference/tmpl/libgnomeui-unused.sgml: Removed.

2002-05-31  Federico Mena Quintero  <federico@ximian.com>

	* libgnomeui/gnome-ui-init.c (relay_gtk_signal): Last part of the
	patch by Frederic Crozat <fcrozat@mandrakesoft.com>.  Changes the
	prefix of sample IDs to "gtk-events-2".
